--- a/PickTimeOutCompany/Views/Home/Login.cshtml
+++ b/PickTimeOutCompany/Views/Home/Login.cshtml
@@ -194,26 +194,25 @@
     }
 </style>
 
+<section class="vh-100">
+    <div id="login-page" class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <h2 class="login-title">login</h2>
+            <form method="post" class="form-login" action="~/home/login">
+                <div class="input-account">
+                    <i class="fas fa-envelope icon"></i>
+                    <input type="userid" name="userid" placeholder="portal account" required>
+                </div>
+                <div class="input-password">
+                    <i class="fas fa-lock icon"></i>
+                    <input type="password" name="password" placeholder="password" required>
+                </div>
 
+                <button type="submit"><i class="fas fa-door-open"></i>log in now</button>
+            </form>
+        </div>
+        <div class="background">
 
-<div id="login-page">
-    <div class="login">
-        <h2 class="login-title">Login</h2>
-        <form method="post" class="form-login" action="~/Home/Login">
-            <div class="input-account">
-                <i class="fas fa-envelope icon"></i>
-                <input type="userid" name="userid" placeholder="Portal Account" required>
-            </div>
-            <div class="input-password">
-                <i class="fas fa-lock icon"></i>
-                <input type="password" name="password" placeholder="Password" required>
-            </div>
-
-            <button type="submit"><i class="fas fa-door-open"></i>Log In Now</button>
-        </form>
+        </div>
     </div>
-    <div class="background">
-
-    </div>
-</div>
-
+</section>
