--- a/PickTimeOutCompany/Views/DataForHR/DataForHR.cshtml
+++ b/PickTimeOutCompany/Views/DataForHR/DataForHR.cshtml
@@ -13,7 +13,7 @@
 
 <div id="spinner"></div>
 <h2>
-    Bảng dữ liệu đăng kí xe về theo ngày (按日期的车辆登记数据表)
+    當日車輛登記信息-@{ var today = DateTime.Now.ToString("yyyy/MM/dd"); }@today
 </h2>
 
 
@@ -24,9 +24,9 @@
             <table class="table table-striped table-class " id="tblDataReadyToStockOut">
                 <tr>
                     <th>Thời Gian</th>
-                    <th>Tiến Lộc</th>
-                    <th>Thành Đạt</th>
-                    <th>Bảo Sơn</th>
+                    <th>Tiến Lộc (近禄)</th>
+                    <th>Thành Đạt (诚达)</th>
+                    <th>Bảo Sơn (宝山)</th>
                 </tr>
                 <tbody id="DataCountTime">
                     @Html.Raw(ViewBag.HtmlCountTime)
@@ -35,33 +35,16 @@
         </div>
 
 
-        <div class="modal fade" id="PickInfo" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title">LIST USER</h3>
-                    </div>
-                    <div class="modal-body">
-                        <div class="fetched-data">
-                            <table id="example" class="display" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>UserId</th>
-                                        <th>UserName</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="PickInfoBody">
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="ClosePickInfo">
-                            Close
-                        </button>
-                    </div>
-                </div>
-            </div>
+        <div class="table-data">
+            <table class="table table-striped table-class " id="PickInfo">
+                <tr>
+                    <th>UserId</th>
+                    <th>UserName</th>
+                </tr>
+                <tbody id="PickInfoBody">
+                    @Html.Raw(ViewBag.HtmlPickInfo)
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
@@ -69,12 +52,7 @@
 
 
 <style>
-    input[type="checkbox"] {
-        width: 20px;
-        height: 20px;
-    }
-
-    .modal-title {
+/*    .modal-title {
         display: flex;
         justify-content: center;
     }
@@ -83,8 +61,14 @@
         display: flex;
         justify-content: center;
         width: 280px;
+    }*/
+    #PickInfo th:nth-child(1), #PickInfo td:nth-child(1) {
+        width: 50px;
     }
 
+    #PickInfo th:nth-child(2), #PickInfo td:nth-child(2) {
+        width: 300px; /* Kích thước cột Tên */
+    }
 
     .text-title {
         margin-top: 15px;
@@ -366,7 +350,6 @@
                 data: { time: time, add: add },
                 success: function (data) {
                     $("#PickInfoBody").html(data);
-                    $("#PickInfo").modal("show");
                 },
                 beforeSend: function () {
                 },
