--- a/PickTimeOutCompany/Views/Shared/_Layout.cshtml
+++ b/PickTimeOutCompany/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/x-icon" href="~/Logo/图标.jpeg">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
